--- a/ansible-core/play.yml
+++ b/ansible-core/play.yml
@@ -66,7 +66,7 @@
       ansible.builtin.reboot:
 
 - name: Config HOST
-  hosts: localhost
+  hosts: core
   become: true
   vars_files:
     - vars/vms.yml
